first draft of rework

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,18 +1,9 @@
 rock_library(trajectory_follower
-    SOURCES TrajectoryControllerNoOrientation.cpp 
-            TrajectoryTargetCalculator.cpp
-	    RK4Integrator.cpp  
+    SOURCES NoOrientationController.cpp 
+            ChainedController.cpp
 	    TrajectoryFollower.cpp
-	    SimpleIntegrator.cpp 
-	    TrajectoryControllerP.cpp
-	    TrajectoryControllerPI.cpp
     HEADERS TrajectoryFollower.hpp
-	TrajectoryControllerNoOrientation.hpp
-	TrajectoryControllerP.hpp
-	TrajectoryControllerPI.hpp
-	RK4Integrator.hpp 
-	SimpleIntegrator.hpp 
-        TrajectoryControllerConfig.hpp
+	NoOrientationController.hpp
+        ChainedController.hpp
         TrajectoryFollowerTypes.hpp
-        TrajectoryTargetCalculator.hpp
     DEPS_PKGCONFIG eigen3 base-types )
