add samson controller.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,8 +2,10 @@ rock_library(trajectory_follower
     SOURCES NoOrientationController.cpp 
             ChainedController.cpp
 	    TrajectoryFollower.cpp
+	    SamsonController.cpp
     HEADERS TrajectoryFollower.hpp
 	NoOrientationController.hpp
         ChainedController.hpp
         TrajectoryFollowerTypes.hpp
+        SamsonController.hpp
     DEPS_PKGCONFIG eigen3 base-types )
