--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 # CMakeLists.txt has to be located in the project folder and cmake has to be
 # executed from 'project/build' with 'cmake ../'.
 cmake_minimum_required(VERSION 2.6)
-SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++0x" )
+set(ROCK_USE_CXX11 TRUE)
 find_package(Rock)
+set(ROCK_TEST_ENABLED ON)
+
 rock_init(trajectory_follower 0.1)
 rock_standard_layout()
