--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 # CMakeLists.txt has to be located in the project folder and cmake has to be
 # executed from 'project/build' with 'cmake ../'.
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.0)
+project(trajectory_follower VERSION 0.1 DESCRIPTION "Trajectory Controller for Mobile Robots")
 set(ROCK_USE_CXX11 TRUE)
 find_package(Rock)
 set(ROCK_TEST_ENABLED ON)
 
-rock_init(trajectory_follower 0.1)
+rock_init()
 rock_standard_layout()
